Added new features

--- a/app/.env.local.example
+++ b/app/.env.local.example
@@ -9,14 +9,7 @@ NEXT_PUBLIC_MAX_SEATS=15
 ANALYTICS_ENABLED=false
 SUPABASE_DB_URL=postgresql://postgres:password%40encoded.project.supabase.co:5432/postgres
 
-# Admin access (basic auth gate)
-ADMIN_USERNAME="admin"
-ADMIN_PASSWORD="change-me"
-
-# Analytics
-NEXT_PUBLIC_PLAUSIBLE_DOMAIN="reservation.example.com"
-ANALYTICS_WEBHOOK_URL="https://script.google.com/macros/s/your-web-app-id/exec"
-HEALTHCHECKS_PING_URL="https://hc-ping.com/your-uuid"
-HEALTHCHECKS_PING_URL_FAILED="https://hc-ping.com/your-uuid/fail"
+# Admin access (painel /admin)
+ADMIN_ACCESS_TOKEN="troque-esta-senha"
 
 
